--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-app\src\main\resources\application.properties
+**/application.properties
+app/src/main/resources/application.properties
+app/target/classes/application.properties
