--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,22 +1,29 @@
-# Importing JDK and copying required files
+# Stage 1: Build the application
 FROM eclipse-temurin:17-jdk AS build
+
 WORKDIR /app
-COPY pom.xml .
-COPY src src
 
-# Copy Maven wrapper
-COPY mvnw .
-COPY .mvn .mvn
+# Copy Maven wrapper and project files from the "app" subdirectory
+COPY app/pom.xml .
+COPY app/mvnw .
+COPY app/.mvn .mvn
+COPY app/src ./src
 
-# Set execution permission for the Maven wrapper
-RUN chmod +x ./mvnw
+# Make mvnw executable
+RUN chmod +x mvnw
+
+# Build the JAR
 RUN ./mvnw clean package -DskipTests
 
-# Stage 2: Create the final Docker image using OpenJDK 17
+# Stage 2: Create final image
 FROM eclipse-temurin:17-jdk
+
+WORKDIR /app
 VOLUME /tmp
 
-# Copy the JAR from the build stage
+# Copy the JAR from build stage
 COPY --from=build /app/target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+
 EXPOSE 8080
+
+ENTRYPOINT ["java","-jar","app.jar"]
